<resources>
    <string name="app_name">LinearLayoutExample</string>
    <string name="hello_this_is_used_to_check_the_text">hello </string>
    <string name="button">Click here to change text</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string-array name="chocolates">
        <item>dairy milk</item>
        <item>fudge chocolate</item>
        <item>mars</item>
        <item>milk chocolte</item>
        <item>dark chocolte</item>
        <item>white chocolte</item>
        <item>beglian chocolte</item>
        <item>swiss chocolte</item>
        <item>gems chocolte</item>
        <item>lion chocolte</item>
        <item>jelly chocolte</item>
        <item>bubble gum</item>
    </string-array>

    <string name="hello">Hello</string>
    <string name="world">World</string>
    <string name="textview">TextView</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="password">Password</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
</resources>